<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.LoginFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLogin"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_70"
        android:text="@string/login"
        app:layout_constraintStart_toEndOf="@id/glStart"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="@dimen/space_300"
        android:background="@drawable/btn_style"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/glEnd"
        app:layout_constraintStart_toStartOf="@+id/glStart"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:fontFamily="@font/amaranth"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_30"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="@dimen/size_20"
        app:layout_constraintStart_toEndOf="@+id/glViewStart"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edName"
        android:layout_width="@dimen/space_0"
        android:layout_height="@dimen/space_60"
        android:layout_marginTop="@dimen/space_10"
        android:background="@drawable/back_edit"
        android:hint="@string/enter_your_name"
        android:inputType="text"
        android:paddingHorizontal="@dimen/space_10"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/glViewEnd"
        app:layout_constraintStart_toEndOf="@+id/glViewStart"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_30"
        android:text="@string/password"
        android:fontFamily="@font/amaranth"
        android:textColor="@color/black"
        android:textSize="@dimen/size_20"
        app:layout_constraintStart_toEndOf="@+id/glViewStart"
        app:layout_constraintTop_toBottomOf="@+id/edName" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edPassword"
        android:layout_width="@dimen/space_0"
        android:layout_height="@dimen/space_60"
        android:layout_marginTop="@dimen/space_10"
        android:background="@drawable/back_edit"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:paddingHorizontal="@dimen/space_10"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/glViewEnd"
        app:layout_constraintStart_toEndOf="@+id/glViewStart"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_60"
        android:background="@drawable/btn_style"
        android:paddingHorizontal="@dimen/space_20"
        android:paddingVertical="@dimen/space_5"
        android:fontFamily="@font/amaranth"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="@dimen/size_25"
        app:layout_constraintEnd_toStartOf="@+id/glViewEnd"
        app:layout_constraintStart_toEndOf="@+id/glViewStart"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glViewStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/space_50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glViewEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/space_50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/space_30" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/space_30" />

</androidx.constraintlayout.widget.ConstraintLayout>